# TurboRAG

./: .gitignore  CMakeLists.txt  README.md  config.yaml  start_ollama_gpu.sh
data/: tsmc_report.txt
include/: tq_allocator.h  tq_attention.h  tq_attention_ref.h  tq_block_table.h  tq_config.h  tq_dense_kernels.cuh  tq_dense_layout.h  tq_dequant_kernels.cuh  tq_layout.h  tq_pack_kernels.cuh  tq_polar.cuh  tq_polar_layout.h  tq_qjl.cuh  tq_quant.h  tq_shared_device.cuh  tq_turbo_mse_kernels.cuh  tq_turbo_mse_layout.h  tq_turbo_prod.cuh  tq_turbo_prod_kernels.cuh  tq_types.h
python/: benchmark.py  rag_demo.py  rag_turbo_comparison.py  rag_turbo_demo.py  tsmc_rag_demo.py  turboquant_wrapper.py
scripts/: build_data.py  precompute_cag.py  run_benchmark.py
src/: gaussian_codebook.cpp  main.cpp  main_turbo_prod.cpp  main_v6.cpp  tq_allocator.cpp  tq_attention_ref.cpp  tq_block_table.cpp  tq_capi.cpp  tq_dense_layout.cpp  tq_layout.cpp  tq_polar_layout.cpp  tq_qjl.cpp  tq_turbo_mse_layout.cpp  tq_turbo_prod.cpp
src/cuda/: tq_attention_ref_kernel.cu  tq_dense_kernels.cu  tq_dequant_kernels.cu  tq_pack_kernels.cu  tq_polar_kernels.cu  tq_qjl_kernels.cu  tq_turbo_mse_kernels.cu  tq_turbo_prod_kernels.cu  tq_turbo_v6_kernels.cu
tests/: test_cag.py
tq_backend/: __init__.py  benchmark.py  cag_store.py  longbench_eval.py  model_runner.py  ttft_sim.py  turboquant_wrapper.py
